--- a/index.html
+++ b/index.html
@@ -2,28 +2,19 @@
 <html>
 	<head>
 			<title> GUISEPPI PANFETTI </title>
-	</head>
+      <link rel="stylesheet" type="text/css" href="style.css">
+	 </head>
 
-	<body>
-
-			<p style=" color :green; ">RESTORANT GUISEPPI PANFETTI</p>
-        <H1>COMIDA ITALIANA</H1>
-        <H2>life is good with food</H2>
-
-      <section> <a href= paginawe.html> pagina web </a>
-    </section>
-    <ol>
-        <li>pizza</li>
-        <ul>hawaina</ul>
-        <ul>peperoni</ul>
-        <ul>pollo</ul>
-        <li>lasangna</li>
-        <ul>bolonegsa</ul>
-        <ul>pollo</ul>
-        <li>pastas</li>
-        <ul>carbonara</ul>
-        <ul>bolonegsa</ul>
- </ol>  
+	<body background="img/fondo.jpg">
+<div class="pagina">
+  <div class="logo">
+    <img src="img/LOGO.jpg" alt="logo">
+  </div>
+  <ul>
+    <li> <a href="index.html" class="actual">home</a></li>
+    <li> <a href="paginawe.html" class="actual">contacto</a></li>
+  </ul>
+ 
 	</body>
 
 </html>
